--- a/DockerFile
+++ b/DockerFile
@@ -8,16 +8,14 @@ COPY asset/ C:/asset/
 ## Mid Server Software URL ##
 #############################
 ## Madrid ##
-#ENV sn_file_url="https://install.service-now.com/glide/distribution/builds/package/mid/2019/06/05/mid.madrid-12-18-2018__patch4-05-29-2019_06-05-2019_1042.windows.x86-64.zip"
-#ENV sn_file_url="https://install.service-now.com/glide/distribution/builds/package/mid/2019/07/10/mid.madrid-12-18-2018__patch4a-07-09-2019_07-10-2019_1243.windows.x86-64.zip"
-ENV sn_file_url="https://install.service-now.com/glide/distribution/builds/package/mid/2019/08/12/mid.madrid-12-18-2018__patch4b-07-17-2019_08-12-2019_1850.windows.x86-64.zip"
+#ENV sn_file_url="https://install.service-now.com/glide/distribution/builds/package/mid/2019/08/12/mid.madrid-12-18-2018__patch4b-07-17-2019_08-12-2019_1850.windows.x86-64.zip"
 ## New York ##
-#ENV sn_file_url="https://install.service-now.com/glide/distribution/builds/package/mid/2019/07/16/mid.newyork-06-26-2019__patch0-hotfix2-07-10-2019_07-16-2019_1636.windows.x86-64.zip"
+ENV sn_file_url="https://install.service-now.com/glide/distribution/builds/package/mid/2019/08/27/mid.newyork-06-26-2019__patch1-08-14-2019_08-27-2019_1720.windows.x86-64.zip"
 
 RUN ["powershell.exe","Invoke-WebRequest -uri $env:sn_file_url -OutFile C:\\agent.zip -UseBasicParsing"]
-RUN ["powershell.exe","Expand-Archive C:\\agent.zip C:\\"]
+RUN ["powershell.exe","Expand-Archive C:\\agent.zip C:\\_agent"]
 RUN ["powershell.exe","DEL C:\\agent.zip"]
-RUN ["powershell.exe","MOVE C:\\agent\\config.xml C:\\asset"]
+RUN ["powershell.exe","MOVE C:\\_agent\agent\\config.xml C:\\asset"]
 
 ENV sn_url=${parameter1:-}
 ENV sn_username=${parameter2:-}
